--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,41 +12,47 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo_transparent"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EcoSynergyApp"
+        android:theme="@style/Base.Theme.EcoSynergyApp"
         tools:targetApi="31">
+
         <activity
             android:name=".SplashScreenActivity"
             android:exported="true"
             android:theme="@style/SplashScreenTheme">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+
         <activity
             android:name=".ProfileActivity"
             android:exported="true" />
+
         <activity
             android:name=".ConfirmationActivity"
             android:exported="true" />
+
         <activity
             android:name=".RegisterActivity2"
             android:exported="true" />
+
         <activity
             android:name=".RegisterActivity"
             android:exported="true" />
+
         <activity
             android:name=".TeamActivity"
             android:exported="true" />
+
         <activity
             android:name=".HomeActivity"
             android:exported="true" />
+
         <activity
             android:name=".LoginActivity"
             android:exported="true" />
-    </application>
 
+    </application>
 </manifest>
