--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,37 +10,32 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/logo_transparent"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/logo_transparent"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.EcoSynergyApp"
-        tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_security_config">
-
-
+        tools:targetApi="31">
+        <activity
+            android:name=".login.ResetActivity"
+            android:exported="false" />
         <activity
             android:name=".ProfileActivity"
             android:exported="true" />
-
         <activity
             android:name=".register.ConfirmationActivity"
             android:exported="true" />
-
         <activity
             android:name=".register.RegisterActivity2"
             android:exported="true" />
-
         <activity
             android:name=".register.RegisterActivity"
             android:exported="true" />
-
         <activity
             android:name=".teams.TeamActivity"
             android:exported="true" />
-
         <activity
             android:name=".home.HomeActivity"
             android:exported="true" />
-
         <activity
             android:name=".login.LoginActivity"
             android:exported="true">
@@ -50,10 +45,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".teams.TeamSettingsActivity"
             android:exported="true" />
-
     </application>
+
 </manifest>
