--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,8 @@
         android:roundIcon="@drawable/logo_transparent"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.EcoSynergyApp"
-        tools:targetApi="31">
-
-        <!--Login-->
+        tools:targetApi="31"
+        android:enableOnBackInvokedCallback="true">
 
         <activity
             android:name=".login.LoginActivity"
