--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/logo_transparent"
         android:label="@string/app_name"
@@ -14,9 +15,10 @@
         android:roundIcon="@drawable/logo_transparent"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.EcoSynergyApp"
-        tools:targetApi="31"
-        android:enableOnBackInvokedCallback="true">
-
+        tools:targetApi="31">
+        <activity
+            android:name=".teams.TeamActivity"
+            android:exported="false" />
         <activity
             android:name=".login.LoginActivity"
             android:exported="true">
@@ -26,11 +28,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".login.ResetActivity"
             android:exported="false" />
-
         <activity
             android:name=".home.HomeActivity"
             android:exported="true" />
@@ -46,7 +46,6 @@
         <activity
             android:name=".home.TermsActivity"
             android:exported="true" />
-
         <activity
             android:name=".register.ConfirmationActivity"
             android:exported="true" />
@@ -56,7 +55,6 @@
         <activity
             android:name=".register.RegisterActivity"
             android:exported="true" />
-
         <activity
             android:name=".teams.TeamSettingsActivity"
             android:exported="true" />
@@ -76,6 +74,6 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
     </application>
+
 </manifest>
