--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,17 +71,12 @@
             android:windowSoftInputMode="adjustResize" />
 
         <activity
-            android:name=".register.ConfirmationActivity"
+            android:name=".signup.ConfirmationActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
 
         <activity
-            android:name=".register.RegisterActivity2"
-            android:exported="true"
-            android:windowSoftInputMode="adjustResize" />
-
-        <activity
-            android:name=".register.RegisterActivity"
+            android:name=".signup.SignUpActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
 
