--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,74 +17,68 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.EcoSynergyApp"
         tools:targetApi="31">
-
+        <activity
+            android:name=".teams.EditTeamActivity"
+            android:exported="false" />
+        <activity
+            android:name=".home.HelpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".home.PermissionsActivity"
+            android:exported="false" />
         <activity
             android:name=".user.UserInfoActivity"
             android:exported="true" />
-
         <activity
-            android:name=".teams.TeamBottomSheet"
+            android:name=".teams.DashboardActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".login.LoginActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
         <activity
             android:name=".login.RecoverPasswordActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".home.HomeActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".user.UserSettingsActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".home.AppSettingsActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".home.NotificationsActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".home.TermsActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".signup.EmailConfirmationActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".signup.SignUpActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".teams.TeamInviteActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".teams.TeamOverviewActivity"
             android:exported="true"
@@ -97,7 +91,6 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
     </application>
 
 </manifest>
