--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,15 @@
         android:theme="@style/Base.Theme.EcoSynergyApp"
         tools:targetApi="31">
         <activity
+            android:name=".teams.GoalsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".teams.InvitesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".teams.GoalsBottomSheet"
+            android:exported="false" />
+        <activity
             android:name=".teams.EditTeamActivity"
             android:exported="false" />
         <activity
@@ -80,7 +89,17 @@
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
         <activity
+            android:name=".teams.TeamInfoActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize" />
+
+        <activity
             android:name=".teams.TeamOverviewActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize" />
+
+        <activity
+            android:name=".teams.TeamMembersActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
 
